scripts/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: {address: 0.0.0.0, port_value: 9901}
static_resources:
  clusters:

  - connect_timeout: 0.25s
    hosts:
    - socket_address: {address: odoo, port_value: 8069}
    - socket_address: {address: odoo-ptvsd, port_value: 8069}
    lb_policy: round_robin
    max_requests_per_connection: 1
    name: target_odoo
    type: strict_dns

  - connect_timeout: 0.25s
    hosts:
    - socket_address: {address: odoo-longpolling, port_value: 8072}
    lb_policy: round_robin
    max_requests_per_connection: 1
    name: target_odoo_longpolling
    type: strict_dns

  - connect_timeout: 0.25s
    hosts:
    - socket_address: {address: smtpfake, port_value: 8025}
    lb_policy: round_robin
    name: target_smtpfake
    type: strict_dns

  - name: target_ptvsd
    connect_timeout: 0.25s
    type: strict_dns
    load_assignment:
      cluster_name: target_ptvsd
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: odoo-ptvsd
                port_value: 6899
        - endpoint:
            address:
              socket_address:
                address: tests-ptvsd
                port_value: 6899

  - connect_timeout: 0.25s
    dns_resolvers:
      - socket_address: {protocol: UDP, address: "1.1.1.1", port_value: 53}
      - socket_address: {protocol: UDP, address: "1.0.0.1", port_value: 53}
      - socket_address: {protocol: UDP, address: "9.9.9.9", port_value: 53}
      - socket_address: {protocol: UDP, address: "8.8.8.8", port_value: 53}
      - socket_address: {protocol: UDP, address: "8.8.4.4", port_value: 53}
    dns_lookup_family: V4_ONLY
    lb_policy: round_robin
    load_assignment:
      cluster_name: service_clouflare
      endpoints:
      - lb_endpoints:
        - endpoint: {address: {socket_address: {address: cdnjs.cloudflare.com, port_value: 80}}}
    name: service_clouflare
    type: logical_dns

  listeners:

  # http adresses
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: auto
          http_filters:
          - {name: envoy.filters.http.router}
          route_config:
            name: local_route
            virtual_hosts:

            - domains: [mail.*]
              name: local_service
              routes:
              - match: {prefix: /}
                route: {cluster: target_smtpfake}

            - domains: [odoo.*]
              name: local_service
              routes:
              - match: {prefix: /longpolling/}
                route: {
                  cluster: target_odoo_longpolling,
                  # odoo keeps longpolling requests for 50s max
                  timeout: 60s
                }
              - match: {prefix: /}
                route: {
                    cluster: target_odoo,
                    # odoo has implemented a blocking UI
                    # 15s is hardly enough, but expose bad design.
                    # NOT FOR PRODUCTION!!!
                    # consider using OCA/queue
                    timeout: 1500s
                }

            - domains: [cdnjs.cloudflare.com]
              name: local_service
              routes:
              - match: {prefix: /}
                route: {cluster: service_clouflare}

          stat_prefix: ingress_http
          upgrade_configs:
          - {upgrade_type: websocket}
          access_log:
          - name: envoy.access_loggers.file
            config:
              path: "/dev/stdout"
        name: envoy.filters.network.http_connection_manager

  # vscode debbuger
  - address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 6899
    filter_chains:
    - filters:
      - name: envoy.filters.network.tcp_proxy
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
          stat_prefix: service
          cluster: target_ptvsd
